--- a/oes-core/src/main/resources/templates/admin/academy/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/academy/save-modal.html
@@ -1,5 +1,5 @@
 <!-- 增加学院信息模态框 -->
-<div class="modal fade" id="save-modal">
+<div class="modal fade" id="saveModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -11,9 +11,8 @@
             <div class="modal-body">
                 <form id="save-form">
                     <div class="form-group form_datetime">
-                        <label for="sname">学院名称</label>
-                        <input type="text" name="name" class="form-control"
-                               id="sname">
+                        <label>学院名称</label>
+                        <input type="text" name="name" class="form-control">
                     </div>
                 </form>
                 <div class="modal-footer">
