--- a/oes-core/src/main/resources/templates/admin/admin/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/admin/save-modal.html
@@ -1,5 +1,5 @@
 <!-- 增加管理员信息模态框 -->
-<div class="modal fade" id="save-modal">
+<div class="modal fade" id="saveModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
