--- a/oes-core/src/main/resources/templates/admin/teacher/list.html
+++ b/oes-core/src/main/resources/templates/admin/teacher/list.html
@@ -6,28 +6,8 @@
     <title>OES | 教师列表</title>
     <!-- 引入全局 css 文件 -->
     <% include("../../include/css.html"){} %>
-    <style>
-        .table > tbody > tr:hover {
-            cursor: pointer;
-        }
-
-        .table > tbody > tr > td {
-            vertical-align: middle;
-        }
-
-        th {
-            font-size: 15px;
-            text-align: center;
-        }
-
-        td {
-            font-size: 16px;
-            text-align: center;
-        }
-
-    </style>
 </head>
-<body class="hold-transition skin-purple">
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 
 <div class="wrapper">
     <!-- 引入头部 -->
@@ -62,56 +42,9 @@
                                 </div>
                             </div>
                             <!-- /.card-header -->
-                            <div class="card-body table-responsive p-0">
-                                <table class="table table-bordered table-striped table-head-fixed text-nowrap">
-                                    <tr>
-                                        <th style="width: 5%">序号</th>
-                                        <th style="width: 20%">姓名</th>
-                                        <th style="width: 15%">工号</th>
-                                        <th style="width: 15%">职位</th>
-                                        <th style="width: 10%">性别</th>
-                                        <th style="width: 35%">操作</th>
-                                    </tr>
-                                    <% if(isEmpty(page.list)){ %>
-                                    <tr>
-                                        <td colspan="6">没有教师</td>
-                                    </tr>
-                                    <% } %>
-                                    <% for( teacher in page.list ){ %>
-                                    <tr class="rowDetail" rel="${teacher.workNumber}">
-                                        <td>${teacherLP.index}</td>
-                                        <td hidden="hidden">${teacher.id}</td>
-                                        <td>${teacher.name}</td>
-                                        <td>${teacher.workNumber}</td>
-                                        <td>${teacher.job}</td>
-                                        <td>${teacher.sex}</td>
-                                        <td rel="${teacher.id}">
-                                            <button class="btn btn-success btn-sm"
-                                                    onclick="goUpdate(${teacher.id})"><i
-                                                    class="fa"></i>编辑
-                                            </button>
-                                            <a class="btn btn-danger btn-sm delTeacher"
-                                               onclick="deleteTeacher(${teacher.id})"><i
-                                                    class="fa"></i>删除</a>
-                                        </td>
-                                    </tr>
-                                    <% } %>
-                                </table>
-                            </div>
-                            <div class="card-footer clearfix">
-                                <ul class="pagination m-0 float-right">
-                                    <%for(var i=1;i<=page.pages;i++){ %>
-                                    <% if(page.pageNum == i){ %>
-                                    <li class="page-item active">
-                                        <a class="page-link" href="?p=${i}">${i}</a>
-                                    </li>
-                                    <%}else{%>
-                                    <li class="page-item">
-                                        <a class="page-link" href="?p=${i}">${i}</a>
-                                    </li>
-                                    <%}%>
-                                    <% }%>
-                                </ul>
+                            <div class="card-body table-responsive">
+                                <!-- bootstrap table 渲染 -->
+                                <table id="teacherInfo" class="table table-bordered table-striped text-nowrap"></table>
                             </div>
                             <!-- /.card-body -->
                         </div>
