--- a/oes-core/src/main/resources/templates/admin/teacher/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/teacher/save-modal.html
@@ -1,5 +1,5 @@
 <!-- 增加教师信息模态框 -->
-<div class="modal fade" id="save-modal">
+<div class="modal fade" id="saveModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -8,9 +8,9 @@
                         aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form class="save-form">
+            <form id="save-form">
                 <div class="modal-body">
-                    <div class="form-group form_datetime">
+                    <div class="form-group">
                         <label>姓名</label>
                         <input type="text" name="name" class="form-control">
                     </div>
