--- a/oes-core/src/main/resources/templates/admin/teacher/update-modal.html
+++ b/oes-core/src/main/resources/templates/admin/teacher/update-modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="update-modal">
+<div class="modal fade" id="updateModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -7,9 +7,9 @@
                         aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form class="update-form">
+            <form id="update-form">
                 <div class="modal-body">
-                    <div class="form-group form_datetime">
+                    <div class="form-group">
                         <label for="id">ID</label>
                         <input type="text" name="id" class="form-control"
                                id="id" readonly="readonly">
