--- a/oes-core/src/main/resources/templates/student/include/sider.html
+++ b/oes-core/src/main/resources/templates/student/include/sider.html
@@ -25,7 +25,7 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- 首页 -->
                 <li class="nav-item">
-                    <a href="/student/home/${session.student.id}" class="nav-link ${name == 'home'?'active':''}">
+                    <a href="/student/home" class="nav-link ${name == 'home'?'active':''}">
                         <i class="nav-icon fas fa-globe"></i>
                         <p>学生首页</p>
                     </a>
