--- a/oes-core/src/main/resources/templates/teacher/include/sider.html
+++ b/oes-core/src/main/resources/templates/teacher/include/sider.html
@@ -28,8 +28,8 @@
                 <!-- 首页 -->
                 <li class="nav-item">
                     <a href="/teacher/home/${session.teacher.id}" class="nav-link ${name == 'home'?'active':''}">
-                        <i class="nav-icon fa fa-vcard"></i>
-                        <p>教师首页</p>
+                        <i class="nav-icon fas fa-vcard"></i>
+                        <p>首页</p>
                     </a>
                 </li>
 
