--- a/oes-core/src/main/resources/templates/admin/academy/update-modal.html
+++ b/oes-core/src/main/resources/templates/admin/academy/update-modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="update-modal">
+<div class="modal fade" id="updateModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
