--- a/oes-core/src/main/resources/templates/admin/announce/save-modal.html
+++ b/oes-core/src/main/resources/templates/admin/announce/save-modal.html
@@ -12,11 +12,11 @@
                 <div class="modal-body">
                     <div class="form-group form_datetime">
                         <label>公告标题</label>
-                        <input type="text" name="title" class="form-control">
+                        <input type="text" name="title" class="form-control" autocomplete="off">
                     </div>
                     <div class="form-group form_datetime">
                         <label>公告内容</label>
-                        <textarea type="text" name="content" class="form-control" rows="8"></textarea>
+                        <textarea type="text" name="content" class="form-control" rows="8"  autocomplete="off"></textarea>
                     </div>
                     <div class="form-group form_datetime">
                         <label>发布人</label>
