--- a/oes-core/src/main/resources/templates/admin/include/header.html
+++ b/oes-core/src/main/resources/templates/admin/include/header.html
@@ -2,7 +2,7 @@
     <!-- Left navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" data-widget="pushmenu" href="#"><i class="fa fa-bars"></i></a>
+            <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
             <a href="/admin/home/${session.admin.id}" class="nav-link">首页</a>
@@ -13,7 +13,7 @@
         <!-- User Account: style can be found in dropdown.less -->
         <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown" href="#">
-                <i class="fa fa-gear"></i>
+                <i class="fas fa-tools"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
                 <!-- Message Start -->
